--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>UFC Streams Canada | Watch UFC Fights Live in HD</title>
+  <meta name="description" content="Watch UFC live streams in Canada. HD quality, no lag, all Fight Nights & PPVs. Works on Smart TV, Mobile, Tablet & Laptop." />
+  <meta name="robots" content="index, follow" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0;
+      background: #000814;
+      font-family: "Poppins", sans-serif;
+      color: white;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 40px 20px;
+    }
+    h1 {
+      font-size: 36px;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+    h2 {
+      font-size: 24px;
+      font-weight: 600;
+      margin-top: 40px;
+    }
+    p {
+      max-width: 700px;
+      margin: 0 auto 20px auto;
+      font-size: 16px;
+      opacity: 0.9;
+    }
+    .cta {
+      display: inline-block;
+      background: #ff004c;
+      padding: 14px 28px;
+      color: white;
+      font-size: 18px;
+      border-radius: 8px;
+      margin-top: 20px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+    .cta:hover {
+      background: #ff336b;
+    }
+    .section {
+      padding: 40px 20px;
+      text-align: center;
+    }
+    .features {
+      max-width: 900px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #001d3d;
+      padding: 25px;
+      border-radius: 12px;
+      border: 1px solid #003566;
+    }
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      opacity: 0.6;
+    }
+  </style>
+</head>
 
+<body>
+  <header>
+    <h1>Watch UFC Streams in Canada</h1>
+    <p>Live UFC Fight Nights, Main Events, PPVs & more — available on all your devices in HD quality.</p>
+    <a class="cta" href="https://iptvonix.com/pricing/">Get Full Access</a>
+  </header>
+
+  <section class="section">
+    <h2>Why Canadians Choose Our UFC Streams</h2>
+    <div class="features">
+      <div class="card">
+        <h3>✔ HD Quality</h3>
+        <p>Enjoy crystal clear HD fights without buffering.</p>
+      </div>
+      <div class="card">
+        <h3>✔ No Blackouts</h3>
+        <p>Never miss a UFC event — all fights included.</p>
+      </div>
+      <div class="card">
+        <h3>✔ Works on Any Device</h3>
+        <p>Smart TV, Phone, Tablet, PC — we support all platforms.</p>
+      </div>
+      <div class="card">
+        <h3>✔ Fight Nights + PPVs</h3>
+        <p>Get access to every UFC event with one plan.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>How to Start Watching</h2>
+    <p>1. Choose a subscription plan<br>2. Receive instant activation<br>3. Enjoy UFC live with no lag</p>
+    <a class="cta" href="https://iptvonix.com/pricing/">Start Watching Now</a>
+  </section>
+
+  <footer>
+    <p>© 2025 UFC Streams Canada • All Rights Reserved</p>
+  </footer>
+</body>
+</html>
